--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recursos gráfics</title>
+    <title>Recursos gràfics</title>
     <link rel="stylesheet" href="style/Untitled-1.css"> 
     <style>
         body {
@@ -16,11 +16,12 @@
     </style>
 </head>
 <body>
-    <h1>Recursos grafics</h1>
-    <h2>Png transparent, video, àudio i vector</h2>
+    <h1>Recursos gràfics</h1>
+    <h2>png transparent, vídeo, àudio i vector</h2>
         <img src="img/580b57fbd9996e24bc43bbdd.png">
         <img src="img/logo2.svg">
         <audio controls autoplay src="img/Perros-Ladrando.mp3"></audio>
+        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/37i9dQZF1DWVJv1UsWItkB?utm_source=generator" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         <video controls src="img/perrito.mp4"></video>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/rsTLyukvxGU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></width=>" frameborder="0"></iframe>
 </body>
